light_clone/tests/ui/missing_clone.stderr
error[E0277]: the trait bound `NoClone: Clone` is not satisfied
 --> tests/ui/missing_clone.rs:5:8
  |
5 | struct NoClone {
  |        ^^^^^^^ the trait `Clone` is not implemented for `NoClone`
  |
note: required by a bound in `LightClone`
 --> src/trait_def.rs
  |
  | pub trait LightClone: Clone {
  |                       ^^^^^ required by this bound in `LightClone`
help: consider annotating `NoClone` with `#[derive(Clone)]`
  |
5 + #[derive(Clone)]
6 | struct NoClone {
  |
