light_clone/tests/ui/missing_clone.rs
use light_clone::LightClone;

// LightClone without Clone should fail - Clone is required
#[derive(LightClone)]
struct NoClone {
    value: i32,
}

fn main() {}
